
using System;
using System.Collections.Generic;
using System.Linq;
using System.Reflection;

namespace ExampleApp
{

    public class Task
    {

        //
        public string TaskId { get; set; }
        //
        public string UserUserId { get; set; }
        //
        public string Name { get; set; }
        //
        public DateTime DueDate { get; set; }
        //
        public string Status { get; set; }
        //
        public object User { get; set; }
        //

    }

}