
using System;
using System.Collections.Generic;
using System.Linq;
using System.Reflection;

namespace ExampleApp
{

    public class TaskType
    {

        //
        public string Name { get; set; }
        //
        public string Description { get; set; }
        //
        public int Id { get; set; }
        //

    }

}